--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,10 @@
 ---
 AllCops:
   Exclude:
-    - "*/node_modules/**/*"
-    - "*/vendor/**/*"
-    - node_modules/**/*
-    - vendor/**/*
+  - "*/node_modules/**/*"
+  - "*/vendor/**/*"
+  - node_modules/**/*
+  - vendor/**/*
   NewCops: enable
 Layout/ClosingHeredocIndentation:
   Enabled: false
@@ -76,6 +76,8 @@ RSpec/NoExpectationExample:
   Enabled: false
 RSpec/PendingWithoutReason:
   Enabled: false
+Rails/Delegate:
+  Enabled: false
 Rails/DynamicFindBy:
   Enabled: false
 Rails/HelperInstanceVariable:
@@ -83,6 +85,8 @@ Rails/HelperInstanceVariable:
 Rails/NegateInclude:
   Enabled: false
 Rails/Output:
+  Enabled: false
+Rails/Presence:
   Enabled: false
 Rails/Present:
   Enabled: false
@@ -111,10 +115,10 @@ Style/StringLiterals:
 Style/StringLiteralsInInterpolation:
   Enabled: false
 require:
-  - rubocop-factory_bot
-  - rubocop-performance
-  - rubocop-rails
-  - rubocop-rake
-  - rubocop-rspec
-  - rubocop-rspec_rails
-  - rubocop-capybara
+- rubocop-factory_bot
+- rubocop-performance
+- rubocop-rails
+- rubocop-rake
+- rubocop-rspec
+- rubocop-rspec_rails
+- rubocop-capybara
